issue #37(partial), execute btn push out by input fix, procedure overflow fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -159,6 +159,9 @@ split-gutter{
 		border-bottom: 1px solid $color2;
 		margin-bottom: 5px;
 		min-height: 18px;
+
+		padding-right: 15px !important;
+		box-sizing: border-box !important;
 		&:hover{
 			background-color: rgba(240,191,160,0.3) !important;
 			//margin-bottom: $fsize1 !important;
